feat: 优化生成图表的prompt，加入redis缓存